--- a/Product/Templates/Layout/playground.html
+++ b/Product/Templates/Layout/playground.html
@@ -1,5 +1,15 @@
 <body class="bo">
 
+<!--      <img style="width: 150px;height: 150px;" src=" {% static 'Product/picture/23.JPG' %}" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src=" {% static 'Product/picture/24.jpeg' %}" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src="{% static 'Product/picture/34.jpg' %}" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src=" {% static 'Product/picture/35' %}.jpeg" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src="{% static 'Product/picture/60.webp' %}" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src="{% static 'Product/picture/81.jpg' %}" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src=" {% static 'Product/picture/61.jpg' %}" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src=" {% static 'Product/picture/62.jpg' %}" alt="">-->
+<!--         <img style="width: 150px;height: 150px;" src=" {% static 'Product/picture/17.jpg' %}" alt="">-->
+
  
 
   
