--- a/Product/Templates/Product/athletics.html
+++ b/Product/Templates/Product/athletics.html
@@ -109,7 +109,8 @@
       </div>
 
       <div style="width: 100%;">
-        <img style="width: 100%;" src="picture/97.png" alt="">
+
+        <img style="width: 100%;" src="{% static 'Product/picture/97.png' %}" alt="">
       </div>
 
      <center style="width: 100%;">
@@ -160,7 +161,7 @@
             
            <div>
             
-           <img style="width: 420px;height: 300px;" src="picture/50.png" alt="">
+           <img style="width: 420px;height: 300px;" src=" {% static 'Product/picture/50.png' %}" alt="">
            </div> 
      
           </div>
@@ -211,6 +212,5 @@
        
    
 </body>
-ss
 
 {% endblock  %}
