--- a/Product/Templates/Product/athletics.html
+++ b/Product/Templates/Product/athletics.html
@@ -179,7 +179,9 @@
             UPDATES FROM THE CHAMBER</h2>
 
           <div style="margin-bottom: 30px;">
-            <h3 style="margin-bottom: 10px;color: #034575">COUNTRY CROSS: JONATHAN A. RUN TO THE STATE COMPETITION</h3>
+            <h3 >
+                <a style="margin-bottom: 10px;color: #034575;text-decoration:none"
+                   href="/cross/">COUNTRY CROSS: JONATHAN A. RUN TO THE STATE COMPETITION </a> </h3>
             <p style="margin-top: 0px;color: #666666;">June 30,2024</p>
           </div>
 
