--- a/Product/Templates/Layout/cover4.html
+++ b/Product/Templates/Layout/cover4.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load static%}
+
+<img style="width: 100%;height: 550px;margin-bottom: 0px;" src=" {% static 'Product/picture/612.jpg' %}" alt="">
