--- a/Product/Templates/Product/volley.html
+++ b/Product/Templates/Product/volley.html
@@ -1,10 +1,94 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
+{% extends 'Layout/layout.html'%}
+
+  {% block title %}
+
+  VOLLEYBALL
+  {% endblock  %}
+
+  {% block content  %}
+
+{% include 'Layout/cover4.html' %}
+
+
+
+{% load static%}
+
+<body class="bo">
+
+<center style="width:100%">
+ <div style="width:80%;text-align:left;margin-bottom:50px">
+    <h1 style="color:#034575">VOLLEYBALL SCHEDULES</h1>
+  <p style="color:#666666" >November 11,2025 | By information</p>
+ </div>
+
+ <div style="width:80%;text-align:left">
+    <p style="color:#444444"> October 4, 2025: JONATHAN A. ABOAGYE 4:30 pm</p>
+   <p style="color:#444444">November 5, 2024: Kwabena Charter 4:30 pm (KSI)</p>
+   <p style="color:#444444">October 8, 2021: Ashanti Tournament, 5 and 8 pm - Bus to drop off only to leave at 4 pm</p>
+   <p style="color:#444444">October 9, 2021: Ashanti Tournament 9: 30 am - NO Bus needed</p>
+   <p style="color:#444444">October 12, 2021: Mighty Academy 4:30 pm</p>
+   <p style="color:#444444">October 13, 2021: Armed Force Military and Maritime Academy. 4:30 pm, Bus to leave at 3:30 pm</p>
+   <p style="color:#444444">October 15, 2021: JAA Charter, 4:30 pm, Bus to leave at 3:45 pm</p>
+   <p style="color:#444444">October 14, 2021: Carver, 4:30 pm</p>
+   <p style="color:#444444">October 18, 2021: Mc35, 4:30 pm</p>
+
+<h2 style="color: #F7941D">*Home games are in bold.</h2>
+
+<h3 style="color:#034575">TICKETS & CONCESSIONS</h3>
+
+<h3>Concessions will be sold. Only cash will be accepted.</h3>
+
+ <P style="color: #F7941D">$2 - Students w/ I.D.</P>
+
+<p style="color: #F7941D">$3 - Children under 12</P>
+
+<p style="color: #F7941D">$6 - Adults</P>
+
+<h3 style="color:#034575">KUMASI GAME DAY PROCEDURES</h3>
+<p style="color: #F7941D">
+  In the interest of public safety and in accordance with The City of New Orleans’
+  rules and regulations for sports and entertainment venues, indoor facilities,
+  and large social gatherings. All game day spectators must comply with those regulations to
+  safely return and keep our community safe.
+</p>
+
+<h3 style="color:#034575">GAME DAY ENTRANCE</h3>
+
+<p style="color:#444444">The game day entrance at North Jonathan and Iconic will open at 4:00 pm.
+  The address to the school is at 2025 Jonathan St.</p>
+
+<h3 style="color:#034575">TICKETS & CONCESSIONS</h3>
+
+<P style="color:#444444">Concessions will be sold. Only cash will be accepted.</p>
+
+  <P style="color: #F7941D">$2 - Students w/ I.D.</P>
+
+<p style="color: #F7941D">$3 - Children under 12</P>
+
+<p style="color: #F7941D">$6 - Adults</P>
+
+<h3 style="color:#034575">VACCINATIONS REQUIRES</h3>
+<p style="color:#444444">
+  Spectators over the age of 12 years must provide evidence of 1) having
+   received at least one dose of a COVID-19 vaccine that has received full approval
+   or emergency use authorization from the U.S. Food and Drug Administration or the
+   World Health Organization or 2) evidence of a negative COVID-19 PCR test taken no
+   more than 72 hours prior to entering the following indoor establishment.
+   Prior to entry, fans may present their verified digital proof of vaccination
+   (LA Wallet or other official government-sanctioned app) or an original, digital
+   photograph or photocopy (both sides) of their CDC vaccination card. They may also
+   present an official vaccination record issued by another state, foreign nation, or the WHO.
+   In lieu of vaccination verification, fans may also present a negative PCR test result that
+   has been taken within the last 72 hours. Families interested in vaccines and testing for students
+   and families during this time should contact the clinic at (504) 613-5648 to schedule a vaccination.
+   This is open to all students and family members.
+</p>
+
+<h3 style="color:#034575">FACE COVERINGS</h3>
+Face covering is required to be worn at all times. Spectators that do not comply with this requirement will be asked to leave.
+ </div>
+</center>
+
 </body>
-</html>
+
+{% endblock %}
