--- a/Product/Templates/Product/athletics.html
+++ b/Product/Templates/Product/athletics.html
@@ -186,12 +186,14 @@
           </div>
 
           <div style="margin-bottom: 30px;">
-            <h3 style="margin-bottom: 10px;color: #034575">BOY'S BASKETBALL</h3>
+              <h3 > <a style="margin-bottom: 10px;color: #034575;text-decoration:none
+                " href="/ball/">BOY'S BASKETBALL </a> </h3>
             <p style="margin-top: 0px;color: #666666;">July 5,2024</p>
           </div>
 
           <div style="margin-bottom: 30px;color: #034575">
-            <h3 style="margin-bottom: 10px;">VOLLEYBALL SCHEDULE</h3>
+            <h3 > <a style="margin-bottom: 10px;color: #034575;text-decoration:none"
+                     href="/volley/">VOLLEYBALL SCHEDULE </a> </h3>
             <p style="margin-top: 0px;color: #666666;">July 18,2024</p>
           </div>
 
